<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/offline_file_path_format_key"
        android:title="@string/offline_file_path_format"/>

    <EditTextPreference
        android:defaultValue="0"
        android:inputType="number"
        android:key="@string/offline_file_beg_key"
        android:title="@string/offline_file_beg"/>

    <EditTextPreference
        android:defaultValue="1"
        android:inputType="number"
        android:key="@string/offline_file_step_key"
        android:title="@string/offline_file_step"/>

    <EditTextPreference
        android:defaultValue="@string/int_max"
        android:inputType="number"
        android:key="@string/offline_file_end_key"
        android:title="@string/offline_file_end"/>

</PreferenceScreen>